Move embeddings model code into a separate folder

--- a/draft_tutorial.ipynb
+++ b/draft_tutorial.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,6 +91,14 @@
      "output_type": "stream",
      "text": [
       "cuda\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cpondoc/classes/cs224w/project/env/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -124,9 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Database object from /home/cpondoc/.cache/relbench/rel-f1/db...\n",
+      "Done in 0.02 seconds.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -199,7 +215,7 @@
        "  'date': <stype.timestamp: 'timestamp'>}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,26 +237,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Optional\n",
-    "from sentence_transformers import SentenceTransformer\n",
-    "from torch import Tensor\n",
-    "\n",
-    "\n",
-    "class GloveTextEmbedding:\n",
-    "    def __init__(self, device: Optional[torch.device\n",
-    "                                       ] = None):\n",
-    "        self.model = SentenceTransformer(\n",
-    "            \"sentence-transformers/average_word_embeddings_glove.6B.300d\",\n",
-    "            device=device,\n",
-    "        )\n",
-    "\n",
-    "    def __call__(self, sentences: List[str]) -> Tensor:\n",
-    "        return torch.from_numpy(self.model.encode(sentences))\n",
-    "\n"
+    "from src.embeddings.glove import GloveTextEmbedding\n",
+    "from src.embeddings.bert import BertTextEmbedding\n"
    ]
   },
   {
@@ -252,13 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "No sentence-transformers model found with name google-bert/bert-base-uncased. Creating a new one with mean pooling.\n",
       "/home/cpondoc/classes/cs224w/project/env/lib/python3.9/site-packages/torch_frame/utils/io.py:98: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  tf_dict, col_stats = torch.load(path)\n",
       "/home/cpondoc/classes/cs224w/project/env/lib/python3.9/site-packages/torch_frame/utils/io.py:98: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
@@ -285,7 +288,7 @@
     "from relbench.modeling.graph import make_pkey_fkey_graph\n",
     "\n",
     "text_embedder_cfg = TextEmbedderConfig(\n",
-    "    text_embedder=GloveTextEmbedding(device=device), batch_size=128\n",
+    "    text_embedder=BertTextEmbedding(device=device), batch_size=128\n",
     ")\n",
     "\n",
     "data, col_stats_dict = make_pkey_fkey_graph(\n",
@@ -307,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,152 +579,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.23it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 01, Train loss: 0.3705380719170417, Val metrics: {'average_precision': np.float64(0.8439138884185899), 'accuracy': 0.7791519434628975, 'f1': np.float64(0.8758689175769613), 'roc_auc': np.float64(0.6106303854875283)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.88it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 02, Train loss: 0.34047463427092667, Val metrics: {'average_precision': np.float64(0.8799107440221448), 'accuracy': 0.6943462897526502, 'f1': np.float64(0.7986030267753201), 'roc_auc': np.float64(0.677061224489796)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.88it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 03, Train loss: 0.3142219522975933, Val metrics: {'average_precision': np.float64(0.8892085444105465), 'accuracy': 0.7420494699646644, 'f1': np.float64(0.8469601677148847), 'roc_auc': np.float64(0.6818321995464853)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.94it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 04, Train loss: 0.31104116706580287, Val metrics: {'average_precision': np.float64(0.889219422838126), 'accuracy': 0.6872791519434629, 'f1': np.float64(0.8039867109634552), 'roc_auc': np.float64(0.6683900226757369)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.86it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 05, Train loss: 0.3089588014440776, Val metrics: {'average_precision': np.float64(0.8902591850707826), 'accuracy': 0.7791519434628975, 'f1': np.float64(0.8758689175769613), 'roc_auc': np.float64(0.6844807256235828)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.88it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 06, Train loss: 0.3044500323659688, Val metrics: {'average_precision': np.float64(0.8933845396365186), 'accuracy': 0.7226148409893993, 'f1': np.float64(0.8324439701173959), 'roc_auc': np.float64(0.6850612244897959)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.61it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 07, Train loss: 0.3025384132295975, Val metrics: {'average_precision': np.float64(0.8924140753910117), 'accuracy': 0.7120141342756183, 'f1': np.float64(0.8241639697950378), 'roc_auc': np.float64(0.6828662131519274)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.91it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 08, Train loss: 0.2960044375598175, Val metrics: {'average_precision': np.float64(0.893006425245377), 'accuracy': 0.6908127208480566, 'f1': np.float64(0.7933884297520661), 'roc_auc': np.float64(0.6828662131519274)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.71it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 09, Train loss: 0.2923163942801379, Val metrics: {'average_precision': np.float64(0.8950437700031866), 'accuracy': 0.6908127208480566, 'f1': np.float64(0.7938751472320377), 'roc_auc': np.float64(0.689124716553288)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.59it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 10, Train loss: 0.2858603843442502, Val metrics: {'average_precision': np.float64(0.9036927266175656), 'accuracy': 0.7102473498233216, 'f1': np.float64(0.8093023255813954), 'roc_auc': np.float64(0.7175873015873016)}\n",
-      "Best Val metrics: {'average_precision': np.float64(0.903591925730604), 'accuracy': 0.7102473498233216, 'f1': np.float64(0.8093023255813954), 'roc_auc': np.float64(0.7172063492063492)}\n",
-      "Best test metrics: {'average_precision': np.float64(0.8339653025810589), 'accuracy': 0.6752136752136753, 'f1': np.float64(0.7760314341846758), 'roc_auc': np.float64(0.7110867125359879)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "state_dict = None\n",
     "best_val_metric = -math.inf if higher_is_better else math.inf\n",
