Also place outside all code for setting up a dataset and task

--- a/draft_tutorial.ipynb
+++ b/draft_tutorial.ipynb
@@ -59,14 +59,10 @@
     "from torch.nn import BCEWithLogitsLoss, L1Loss\n",
     "from relbench.datasets import get_dataset\n",
     "from relbench.tasks import get_task\n",
+    "from src.tasks.tasks import initialize_task\n",
     "\n",
     "# Set up dataset and task, define metrics and loss\n",
-    "dataset = get_dataset(\"rel-f1\", download=True)\n",
-    "task = get_task(\"rel-f1\", \"driver-dnf\", download=True)\n",
-    "\n",
-    "train_table = task.get_table(\"train\")\n",
-    "val_table = task.get_table(\"val\")\n",
-    "test_table = task.get_table(\"test\")\n",
+    "dataset, task, train_table, val_table, test_table = initialize_task(\"rel-f1\", \"driver-dnf\")\n",
     "\n",
     "out_channels = 1\n",
     "loss_fn = BCEWithLogitsLoss()\n",
@@ -310,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,9 +575,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  7.86it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 01, Train loss: 0.38038626119420005, Val metrics: {'average_precision': np.float64(0.8320271966776239), 'accuracy': 0.7791519434628975, 'f1': np.float64(0.8758689175769613), 'roc_auc': np.float64(0.5939047619047619)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.93it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 02, Train loss: 0.34903314348723863, Val metrics: {'average_precision': np.float64(0.8684545231252181), 'accuracy': 0.5830388692579506, 'f1': np.float64(0.66189111747851), 'roc_auc': np.float64(0.647328798185941)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.93it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 03, Train loss: 0.3175837788902254, Val metrics: {'average_precision': np.float64(0.8882144858234874), 'accuracy': 0.7544169611307421, 'f1': np.float64(0.8568486096807415), 'roc_auc': np.float64(0.678294784580499)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.96it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 04, Train loss: 0.310340664509709, Val metrics: {'average_precision': np.float64(0.8884254266850332), 'accuracy': 0.773851590106007, 'f1': np.float64(0.872), 'roc_auc': np.float64(0.677297052154195)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.95it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 05, Train loss: 0.3055386054751938, Val metrics: {'average_precision': np.float64(0.8910222959804766), 'accuracy': 0.7420494699646644, 'f1': np.float64(0.8479166666666667), 'roc_auc': np.float64(0.6763537414965985)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.94it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 06, Train loss: 0.3008974842441854, Val metrics: {'average_precision': np.float64(0.887218572318659), 'accuracy': 0.6713780918727915, 'f1': np.float64(0.7720588235294118), 'roc_auc': np.float64(0.6650158730158731)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.82it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 07, Train loss: 0.2975968336826056, Val metrics: {'average_precision': np.float64(0.8883362619701176), 'accuracy': 0.7491166077738516, 'f1': np.float64(0.8508403361344538), 'roc_auc': np.float64(0.6828299319727891)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.96it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 08, Train loss: 0.2959435798071737, Val metrics: {'average_precision': np.float64(0.8893077974582537), 'accuracy': 0.6678445229681979, 'f1': np.float64(0.7740384615384616), 'roc_auc': np.float64(0.6780045351473923)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.91it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 09, Train loss: 0.288865543004142, Val metrics: {'average_precision': np.float64(0.8958534621033442), 'accuracy': 0.7544169611307421, 'f1': np.float64(0.8467475192943771), 'roc_auc': np.float64(0.6958730158730159)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.76it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 10, Train loss: 0.28812916938977134, Val metrics: {'average_precision': np.float64(0.8924483503596276), 'accuracy': 0.7173144876325088, 'f1': np.float64(0.817351598173516), 'roc_auc': np.float64(0.6878185941043085)}\n",
+      "Best Val metrics: {'average_precision': np.float64(0.8959214601585412), 'accuracy': 0.7544169611307421, 'f1': np.float64(0.8467475192943771), 'roc_auc': np.float64(0.6960362811791383)}\n",
+      "Best test metrics: {'average_precision': np.float64(0.8504520900815415), 'accuracy': 0.7336182336182336, 'f1': np.float64(0.827966881324747), 'roc_auc': np.float64(0.7344312692138779)}\n"
+     ]
+    }
+   ],
    "source": [
     "state_dict = None\n",
     "best_val_metric = -math.inf if higher_is_better else math.inf\n",
