--- a/draft_tutorial.ipynb
+++ b/draft_tutorial.ipynb
@@ -351,153 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.nn import BCEWithLogitsLoss\n",
+    "from src.models.rdl import RDLModel\n",
     "import copy\n",
-    "from typing import Any, Dict, List\n",
     "\n",
-    "import torch\n",
-    "from torch import Tensor\n",
-    "from torch.nn import Embedding, ModuleDict\n",
-    "from torch_frame.data.stats import StatType\n",
-    "from torch_geometric.data import HeteroData\n",
-    "from torch_geometric.nn import MLP\n",
-    "from torch_geometric.typing import NodeType\n",
-    "\n",
-    "from relbench.modeling.nn import HeteroEncoder, HeteroGraphSAGE, HeteroTemporalEncoder\n",
-    "\n",
-    "\n",
-    "class Model(torch.nn.Module):\n",
-    "\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        data: HeteroData,\n",
-    "        col_stats_dict: Dict[str, Dict[str, Dict[StatType, Any]]],\n",
-    "        num_layers: int,\n",
-    "        channels: int,\n",
-    "        out_channels: int,\n",
-    "        aggr: str,\n",
-    "        norm: str,\n",
-    "        # List of node types to add shallow embeddings to input\n",
-    "        shallow_list: List[NodeType] = [],\n",
-    "        # ID awareness\n",
-    "        id_awareness: bool = False,\n",
-    "    ):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.encoder = HeteroEncoder(\n",
-    "            channels=channels,\n",
-    "            node_to_col_names_dict={\n",
-    "                node_type: data[node_type].tf.col_names_dict\n",
-    "                for node_type in data.node_types\n",
-    "            },\n",
-    "            node_to_col_stats=col_stats_dict,\n",
-    "        )\n",
-    "        self.temporal_encoder = HeteroTemporalEncoder(\n",
-    "            node_types=[\n",
-    "                node_type for node_type in data.node_types if \"time\" in data[node_type]\n",
-    "            ],\n",
-    "            channels=channels,\n",
-    "        )\n",
-    "        self.gnn = HeteroGraphSAGE(\n",
-    "            node_types=data.node_types,\n",
-    "            edge_types=data.edge_types,\n",
-    "            channels=channels,\n",
-    "            aggr=aggr,\n",
-    "            num_layers=num_layers,\n",
-    "        )\n",
-    "        self.head = MLP(\n",
-    "            channels,\n",
-    "            out_channels=out_channels,\n",
-    "            norm=norm,\n",
-    "            num_layers=1,\n",
-    "        )\n",
-    "        self.embedding_dict = ModuleDict(\n",
-    "            {\n",
-    "                node: Embedding(data.num_nodes_dict[node], channels)\n",
-    "                for node in shallow_list\n",
-    "            }\n",
-    "        )\n",
-    "\n",
-    "        self.id_awareness_emb = None\n",
-    "        if id_awareness:\n",
-    "            self.id_awareness_emb = torch.nn.Embedding(1, channels)\n",
-    "        self.reset_parameters()\n",
-    "\n",
-    "    def reset_parameters(self):\n",
-    "        self.encoder.reset_parameters()\n",
-    "        self.temporal_encoder.reset_parameters()\n",
-    "        self.gnn.reset_parameters()\n",
-    "        self.head.reset_parameters()\n",
-    "        for embedding in self.embedding_dict.values():\n",
-    "            torch.nn.init.normal_(embedding.weight, std=0.1)\n",
-    "        if self.id_awareness_emb is not None:\n",
-    "            self.id_awareness_emb.reset_parameters()\n",
-    "\n",
-    "    def forward(\n",
-    "        self,\n",
-    "        batch: HeteroData,\n",
-    "        entity_table: NodeType,\n",
-    "    ) -> Tensor:\n",
-    "        seed_time = batch[entity_table].seed_time\n",
-    "        x_dict = self.encoder(batch.tf_dict)\n",
-    "\n",
-    "        rel_time_dict = self.temporal_encoder(\n",
-    "            seed_time, batch.time_dict, batch.batch_dict\n",
-    "        )\n",
-    "\n",
-    "        for node_type, rel_time in rel_time_dict.items():\n",
-    "            x_dict[node_type] = x_dict[node_type] + rel_time\n",
-    "\n",
-    "        for node_type, embedding in self.embedding_dict.items():\n",
-    "            x_dict[node_type] = x_dict[node_type] + embedding(batch[node_type].n_id)\n",
-    "\n",
-    "        x_dict = self.gnn(\n",
-    "            x_dict,\n",
-    "            batch.edge_index_dict,\n",
-    "            batch.num_sampled_nodes_dict,\n",
-    "            batch.num_sampled_edges_dict,\n",
-    "        )\n",
-    "\n",
-    "        return self.head(x_dict[entity_table][: seed_time.size(0)])\n",
-    "\n",
-    "    def forward_dst_readout(\n",
-    "        self,\n",
-    "        batch: HeteroData,\n",
-    "        entity_table: NodeType,\n",
-    "        dst_table: NodeType,\n",
-    "    ) -> Tensor:\n",
-    "        if self.id_awareness_emb is None:\n",
-    "            raise RuntimeError(\n",
-    "                \"id_awareness must be set True to use forward_dst_readout\"\n",
-    "            )\n",
-    "        seed_time = batch[entity_table].seed_time\n",
-    "        x_dict = self.encoder(batch.tf_dict)\n",
-    "        # Add ID-awareness to the root node\n",
-    "        x_dict[entity_table][: seed_time.size(0)] += self.id_awareness_emb.weight\n",
-    "\n",
-    "        rel_time_dict = self.temporal_encoder(\n",
-    "            seed_time, batch.time_dict, batch.batch_dict\n",
-    "        )\n",
-    "\n",
-    "        for node_type, rel_time in rel_time_dict.items():\n",
-    "            x_dict[node_type] = x_dict[node_type] + rel_time\n",
-    "\n",
-    "        for node_type, embedding in self.embedding_dict.items():\n",
-    "            x_dict[node_type] = x_dict[node_type] + embedding(batch[node_type].n_id)\n",
-    "\n",
-    "        x_dict = self.gnn(\n",
-    "            x_dict,\n",
-    "            batch.edge_index_dict,\n",
-    "        )\n",
-    "\n",
-    "        return self.head(x_dict[dst_table])\n",
-    "\n",
-    "\n",
-    "model = Model(\n",
+    "model = RDLModel(\n",
     "    data=data,\n",
     "    col_stats_dict=col_stats_dict,\n",
     "    num_layers=2,\n",
@@ -582,42 +443,112 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  7.86it/s]\n"
+      "100%|██████████| 23/23 [00:02<00:00,  8.04it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01, Train loss: 0.38038626119420005, Val metrics: {'average_precision': np.float64(0.8320271966776239), 'accuracy': 0.7791519434628975, 'f1': np.float64(0.8758689175769613), 'roc_auc': np.float64(0.5939047619047619)}\n"
+      "Epoch: 01, Train loss: 0.3801887325714644, Val metrics: {'average_precision': np.float64(0.8355929555342954), 'accuracy': 0.7791519434628975, 'f1': np.float64(0.8758689175769613), 'roc_auc': np.float64(0.5977687074829933)}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.93it/s]\n"
+      "100%|██████████| 23/23 [00:02<00:00,  8.80it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 02, Train loss: 0.34903314348723863, Val metrics: {'average_precision': np.float64(0.8684545231252181), 'accuracy': 0.5830388692579506, 'f1': np.float64(0.66189111747851), 'roc_auc': np.float64(0.647328798185941)}\n"
+      "Epoch: 02, Train loss: 0.3479877723844993, Val metrics: {'average_precision': np.float64(0.8732252620759755), 'accuracy': 0.7314487632508834, 'f1': np.float64(0.8376068376068376), 'roc_auc': np.float64(0.6647619047619048)}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.93it/s]\n"
+      "100%|██████████| 23/23 [00:02<00:00,  8.97it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 03, Train loss: 0.3175837788902254, Val metrics: {'average_precision': np.float64(0.8882144858234874), 'accuracy': 0.7544169611307421, 'f1': np.float64(0.8568486096807415), 'roc_auc': np.float64(0.678294784580499)}\n"
+      "Epoch: 03, Train loss: 0.31301642970411586, Val metrics: {'average_precision': np.float64(0.8874774948153648), 'accuracy': 0.7614840989399293, 'f1': np.float64(0.8612538540596094), 'roc_auc': np.float64(0.679891156462585)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.92it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 04, Train loss: 0.30730570314742445, Val metrics: {'average_precision': np.float64(0.8916255989833356), 'accuracy': 0.7385159010600707, 'f1': np.float64(0.8448637316561844), 'roc_auc': np.float64(0.6831564625850339)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.92it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 05, Train loss: 0.3008378823208209, Val metrics: {'average_precision': np.float64(0.8938010756908914), 'accuracy': 0.7491166077738516, 'f1': np.float64(0.8526970954356846), 'roc_auc': np.float64(0.6840090702947845)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.89it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 06, Train loss: 0.2986423067625143, Val metrics: {'average_precision': np.float64(0.8913826747810455), 'accuracy': 0.7173144876325088, 'f1': np.float64(0.8257080610021786), 'roc_auc': np.float64(0.6806530612244898)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  9.01it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 07, Train loss: 0.2915483071842491, Val metrics: {'average_precision': np.float64(0.8926329149547951), 'accuracy': 0.7720848056537103, 'f1': np.float64(0.8695652173913043), 'roc_auc': np.float64(0.6908662131519275)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  9.07it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 08, Train loss: 0.28820174648586033, Val metrics: {'average_precision': np.float64(0.894604479593628), 'accuracy': 0.7314487632508834, 'f1': np.float64(0.8264840182648402), 'roc_auc': np.float64(0.691827664399093)}\n"
      ]
     },
     {
@@ -631,93 +562,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 04, Train loss: 0.310340664509709, Val metrics: {'average_precision': np.float64(0.8884254266850332), 'accuracy': 0.773851590106007, 'f1': np.float64(0.872), 'roc_auc': np.float64(0.677297052154195)}\n"
+      "Epoch: 09, Train loss: 0.28438007274232713, Val metrics: {'average_precision': np.float64(0.8997137168141898), 'accuracy': 0.7667844522968198, 'f1': np.float64(0.8565217391304348), 'roc_auc': np.float64(0.7076462585034013)}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.95it/s]\n"
+      "100%|██████████| 23/23 [00:02<00:00,  8.81it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 05, Train loss: 0.3055386054751938, Val metrics: {'average_precision': np.float64(0.8910222959804766), 'accuracy': 0.7420494699646644, 'f1': np.float64(0.8479166666666667), 'roc_auc': np.float64(0.6763537414965985)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.94it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 06, Train loss: 0.3008974842441854, Val metrics: {'average_precision': np.float64(0.887218572318659), 'accuracy': 0.6713780918727915, 'f1': np.float64(0.7720588235294118), 'roc_auc': np.float64(0.6650158730158731)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.82it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 07, Train loss: 0.2975968336826056, Val metrics: {'average_precision': np.float64(0.8883362619701176), 'accuracy': 0.7491166077738516, 'f1': np.float64(0.8508403361344538), 'roc_auc': np.float64(0.6828299319727891)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.96it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 08, Train loss: 0.2959435798071737, Val metrics: {'average_precision': np.float64(0.8893077974582537), 'accuracy': 0.6678445229681979, 'f1': np.float64(0.7740384615384616), 'roc_auc': np.float64(0.6780045351473923)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.91it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 09, Train loss: 0.288865543004142, Val metrics: {'average_precision': np.float64(0.8958534621033442), 'accuracy': 0.7544169611307421, 'f1': np.float64(0.8467475192943771), 'roc_auc': np.float64(0.6958730158730159)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.76it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 10, Train loss: 0.28812916938977134, Val metrics: {'average_precision': np.float64(0.8924483503596276), 'accuracy': 0.7173144876325088, 'f1': np.float64(0.817351598173516), 'roc_auc': np.float64(0.6878185941043085)}\n",
-      "Best Val metrics: {'average_precision': np.float64(0.8959214601585412), 'accuracy': 0.7544169611307421, 'f1': np.float64(0.8467475192943771), 'roc_auc': np.float64(0.6960362811791383)}\n",
-      "Best test metrics: {'average_precision': np.float64(0.8504520900815415), 'accuracy': 0.7336182336182336, 'f1': np.float64(0.827966881324747), 'roc_auc': np.float64(0.7344312692138779)}\n"
+      "Epoch: 10, Train loss: 0.28583193557120967, Val metrics: {'average_precision': np.float64(0.8982983179086812), 'accuracy': 0.657243816254417, 'f1': np.float64(0.7610837438423645), 'roc_auc': np.float64(0.699374149659864)}\n",
+      "Best Val metrics: {'average_precision': np.float64(0.8995958975528964), 'accuracy': 0.7667844522968198, 'f1': np.float64(0.8565217391304348), 'roc_auc': np.float64(0.7071564625850341)}\n",
+      "Best test metrics: {'average_precision': np.float64(0.8561460655762598), 'accuracy': 0.7236467236467237, 'f1': np.float64(0.8255395683453237), 'roc_auc': np.float64(0.7260332796564679)}\n"
      ]
     }
    ],
