Clean up all code, make it generalizable!

--- a/draft_tutorial.ipynb
+++ b/draft_tutorial.ipynb
@@ -27,36 +27,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cpondoc/classes/cs224w/project/env/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Adding all imports here, to focus on general code below.\n",
-    "import copy\n",
-    "import os\n",
-    "import torch\n",
-    "import torch_geometric\n",
-    "from torch_geometric.seed import seed_everything\n",
-    "import torch_frame\n",
-    "import numpy as np\n",
-    "from torch.nn import BCEWithLogitsLoss, L1Loss\n",
-    "from src.tasks.tasks import initialize_task, db_to_graph\n",
-    "import math\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,16 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cpondoc/classes/cs224w/project/env/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
+    "from src.tasks.tasks import initialize_task, db_to_graph\n",
+    "import torch\n",
+    "from torch.nn import BCEWithLogitsLoss\n",
+    "from torch_geometric.seed import seed_everything\n",
+    "\n",
     "# Set up dataset and task, define metrics and loss\n",
     "dataset, task, train_table, val_table, test_table = initialize_task(\"rel-f1\", \"driver-dnf\")\n",
-    "out_channels = 1\n",
     "loss_fn = BCEWithLogitsLoss()\n",
-    "tune_metric = \"roc_auc\"\n",
-    "higher_is_better = True\n",
     "\n",
     "# Set up device\n",
     "seed_everything(42)\n",
@@ -98,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,8 +116,9 @@
     }
    ],
    "source": [
-    "from torch_frame.config.text_embedder import TextEmbedderConfig\n",
+    "import os\n",
     "from relbench.modeling.graph import make_pkey_fkey_graph\n",
+    "from torch_frame.config.text_embedder import TextEmbedderConfig\n",
     "from src.embeddings.glove import GloveTextEmbedding\n",
     "\n",
     "# Preprocess the database data and set up our text embedder\n",
@@ -166,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,234 +177,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training a Model\n",
-    "We'll first set up the necessary packages and load in our data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set up our data lodaers."
+    "Finalize, let's initialize our training run, and evaluate our model!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from relbench.modeling.graph import get_node_train_table_input, make_pkey_fkey_graph\n",
-    "from torch_geometric.loader import NeighborLoader\n",
-    "\n",
-    "loader_dict = {}\n",
-    "\n",
-    "for split, table in [\n",
-    "    (\"train\", train_table),\n",
-    "    (\"val\", val_table),\n",
-    "    (\"test\", test_table),\n",
-    "]:\n",
-    "    table_input = get_node_train_table_input(\n",
-    "        table=table,\n",
-    "        task=task,\n",
-    "    )\n",
-    "    entity_table = table_input.nodes[0]\n",
-    "    loader_dict[split] = NeighborLoader(\n",
-    "        data,\n",
-    "        num_neighbors=[\n",
-    "            128 for i in range(2)\n",
-    "        ],  # we sample subgraphs of depth 2, 128 neighbors per node.\n",
-    "        time_attr=\"time\",\n",
-    "        input_nodes=table_input.nodes,\n",
-    "        input_time=table_input.time,\n",
-    "        transform=table_input.transform,\n",
-    "        batch_size=512,\n",
-    "        temporal_strategy=\"uniform\",\n",
-    "        shuffle=split == \"train\",\n",
-    "        num_workers=0,\n",
-    "        persistent_workers=False,\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Define our model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.models.rdl import RDLModel\n",
-    "import copy\n",
-    "\n",
-    "model = RDLModel(\n",
-    "    data=data,\n",
-    "    col_stats_dict=col_stats_dict,\n",
-    "    num_layers=2,\n",
-    "    channels=128,\n",
-    "    out_channels=1,\n",
-    "    aggr=\"sum\",\n",
-    "    norm=\"batch_norm\",\n",
-    ").to(device)\n",
-    "\n",
-    "\n",
-    "# if you try out different RelBench tasks you will need to change these\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
-    "epochs = 10"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Train/Test Loops."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train() -> float:\n",
-    "    model.train()\n",
-    "\n",
-    "    loss_accum = count_accum = 0\n",
-    "    for batch in tqdm(loader_dict[\"train\"]):\n",
-    "        batch = batch.to(device)\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "        pred = model(\n",
-    "            batch,\n",
-    "            task.entity_table,\n",
-    "        )\n",
-    "        pred = pred.view(-1) if pred.size(1) == 1 else pred\n",
-    "\n",
-    "        loss = loss_fn(pred.float(), batch[entity_table].y.float())\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        loss_accum += loss.detach().item() * pred.size(0)\n",
-    "        count_accum += pred.size(0)\n",
-    "\n",
-    "    return loss_accum / count_accum\n",
-    "\n",
-    "\n",
-    "@torch.no_grad()\n",
-    "def test(loader) -> np.ndarray:\n",
-    "    model.eval()\n",
-    "\n",
-    "    pred_list = []\n",
-    "    for batch in loader:\n",
-    "        batch = batch.to(device)\n",
-    "        pred = model(\n",
-    "            batch,\n",
-    "            task.entity_table,\n",
-    "        )\n",
-    "        pred = pred.view(-1) if pred.size(1) == 1 else pred\n",
-    "        pred_list.append(pred.detach().cpu())\n",
-    "    return torch.cat(pred_list, dim=0).numpy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Standardize the training loop."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23/23 [00:03<00:00,  7.40it/s]\n"
+      "100%|██████████| 23/23 [00:02<00:00,  7.75it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01, Train loss: 0.3705791100832219, Val metrics: {'average_precision': np.float64(0.8436037599700656), 'accuracy': 0.7791519434628975, 'f1': np.float64(0.8758689175769613), 'roc_auc': np.float64(0.6107755102040816)}\n"
+      "Epoch: 01, Train loss: 0.2742630013000034, Val metrics: {'average_precision': np.float64(0.9091588363415968), 'accuracy': 0.7332155477031802, 'f1': np.float64(0.8262370540851554), 'roc_auc': np.float64(0.7296507936507937)}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.88it/s]\n"
+      "100%|██████████| 23/23 [00:02<00:00,  8.72it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 02, Train loss: 0.3423137633271477, Val metrics: {'average_precision': np.float64(0.8799940068195036), 'accuracy': 0.7720848056537103, 'f1': np.float64(0.8695652173913043), 'roc_auc': np.float64(0.6642721088435374)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.88it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 03, Train loss: 0.31372833428766483, Val metrics: {'average_precision': np.float64(0.8816025239374385), 'accuracy': 0.7402826855123675, 'f1': np.float64(0.8467153284671532), 'roc_auc': np.float64(0.6661768707482993)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.93it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 04, Train loss: 0.31049752491099863, Val metrics: {'average_precision': np.float64(0.8858926490760746), 'accuracy': 0.6855123674911661, 'f1': np.float64(0.8043956043956044), 'roc_auc': np.float64(0.6563265306122449)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.88it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 05, Train loss: 0.3096003109938047, Val metrics: {'average_precision': np.float64(0.8864993593927938), 'accuracy': 0.7791519434628975, 'f1': np.float64(0.8758689175769613), 'roc_auc': np.float64(0.6629297052154195)}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.74it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 06, Train loss: 0.30432194704585736, Val metrics: {'average_precision': np.float64(0.8873364211338444), 'accuracy': 0.7084805653710248, 'f1': np.float64(0.8192771084337349), 'roc_auc': np.float64(0.666485260770975)}\n"
+      "Epoch: 02, Train loss: 0.27137437623166233, Val metrics: {'average_precision': np.float64(0.9196102712308644), 'accuracy': 0.7402826855123675, 'f1': np.float64(0.8243727598566308), 'roc_auc': np.float64(0.7690702947845806)}\n"
      ]
     },
     {
@@ -436,78 +224,120 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 07, Train loss: 0.29998061832145995, Val metrics: {'average_precision': np.float64(0.8903041190279581), 'accuracy': 0.6837455830388692, 'f1': np.float64(0.7906432748538011), 'roc_auc': np.float64(0.6700226757369614)}\n"
+      "Epoch: 03, Train loss: 0.26706399297763334, Val metrics: {'average_precision': np.float64(0.9194486869901948), 'accuracy': 0.7526501766784452, 'f1': np.float64(0.8360655737704918), 'roc_auc': np.float64(0.7669841269841271)}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.91it/s]\n"
+      "100%|██████████| 23/23 [00:02<00:00,  8.96it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 08, Train loss: 0.2966564161918947, Val metrics: {'average_precision': np.float64(0.8881872986413166), 'accuracy': 0.734982332155477, 'f1': np.float64(0.8417721518987342), 'roc_auc': np.float64(0.6761179138321995)}\n"
+      "Epoch: 04, Train loss: 0.2641804050202019, Val metrics: {'average_precision': np.float64(0.91130291019319), 'accuracy': 0.7367491166077739, 'f1': np.float64(0.8253223915592028), 'roc_auc': np.float64(0.751891156462585)}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.49it/s]\n"
+      "100%|██████████| 23/23 [00:02<00:00,  8.94it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 09, Train loss: 0.2957169677794173, Val metrics: {'average_precision': np.float64(0.8833882066348911), 'accuracy': 0.7756183745583038, 'f1': np.float64(0.8718466195761857), 'roc_auc': np.float64(0.6738503401360544)}\n"
+      "Epoch: 05, Train loss: 0.2631346625415066, Val metrics: {'average_precision': np.float64(0.904638169380007), 'accuracy': 0.7455830388692579, 'f1': np.float64(0.8329466357308585), 'roc_auc': np.float64(0.7377233560090701)}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23/23 [00:02<00:00,  8.53it/s]\n"
+      "100%|██████████| 23/23 [00:02<00:00,  8.96it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 10, Train loss: 0.29916005275197455, Val metrics: {'average_precision': np.float64(0.8864954185695677), 'accuracy': 0.6713780918727915, 'f1': np.float64(0.7726161369193154), 'roc_auc': np.float64(0.6777505668934241)}\n",
-      "Best Val metrics: {'average_precision': np.float64(0.8866205997515307), 'accuracy': 0.6713780918727915, 'f1': np.float64(0.7726161369193154), 'roc_auc': np.float64(0.6782403628117913)}\n",
-      "Best test metrics: {'average_precision': np.float64(0.8310967181107907), 'accuracy': 0.717948717948718, 'f1': np.float64(0.7838427947598253), 'roc_auc': np.float64(0.7094032108524861)}\n"
+      "Epoch: 06, Train loss: 0.2680998766516816, Val metrics: {'average_precision': np.float64(0.9105063758182084), 'accuracy': 0.8021201413427562, 'f1': np.float64(0.8798283261802575), 'roc_auc': np.float64(0.7572607709750566)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.99it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 07, Train loss: 0.2664446948538026, Val metrics: {'average_precision': np.float64(0.9038685271605801), 'accuracy': 0.6908127208480566, 'f1': np.float64(0.7809762202753442), 'roc_auc': np.float64(0.7385034013605443)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.96it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 08, Train loss: 0.2609164908054301, Val metrics: {'average_precision': np.float64(0.9091801190972069), 'accuracy': 0.7279151943462897, 'f1': np.float64(0.8183962264150944), 'roc_auc': np.float64(0.7463764172335601)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.95it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 09, Train loss: 0.2581679197179269, Val metrics: {'average_precision': np.float64(0.9061994948069243), 'accuracy': 0.7314487632508834, 'f1': np.float64(0.8186157517899761), 'roc_auc': np.float64(0.7440907029478457)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:02<00:00,  8.97it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 10, Train loss: 0.25288130452521956, Val metrics: {'average_precision': np.float64(0.9096831112598548), 'accuracy': 0.7332155477031802, 'f1': np.float64(0.8200238379022646), 'roc_auc': np.float64(0.7504943310657595)}\n",
+      "Best val metrics: {'average_precision': np.float64(0.9195556345244392), 'accuracy': 0.7402826855123675, 'f1': np.float64(0.8243727598566308), 'roc_auc': np.float64(0.7689795918367347)}\n",
+      "Best test metrics: {'average_precision': np.float64(0.8424542429485771), 'accuracy': 0.6766381766381766, 'f1': np.float64(0.7686034658511722), 'roc_auc': np.float64(0.7116917971990436)}\n"
      ]
     }
    ],
    "source": [
-    "state_dict = None\n",
-    "best_val_metric = -math.inf if higher_is_better else math.inf\n",
-    "for epoch in range(1, epochs + 1):\n",
-    "    train_loss = train()\n",
-    "    val_pred = test(loader_dict[\"val\"])\n",
-    "    val_metrics = task.evaluate(val_pred, val_table)\n",
-    "    print(f\"Epoch: {epoch:02d}, Train loss: {train_loss}, Val metrics: {val_metrics}\")\n",
+    "from src.models.training import eval_model, training_run\n",
     "\n",
-    "    if (higher_is_better and val_metrics[tune_metric] > best_val_metric) or (\n",
-    "        not higher_is_better and val_metrics[tune_metric] < best_val_metric\n",
-    "    ):\n",
-    "        best_val_metric = val_metrics[tune_metric]\n",
-    "        state_dict = copy.deepcopy(model.state_dict())\n",
-    "\n",
-    "\n",
+    "# Get model after a training run\n",
+    "state_dict = training_run(model, device, optimizer, task, loader_dict, val_table, loss_fn, entity_table)\n",
     "model.load_state_dict(state_dict)\n",
-    "val_pred = test(loader_dict[\"val\"])\n",
-    "val_metrics = task.evaluate(val_pred, val_table)\n",
-    "print(f\"Best Val metrics: {val_metrics}\")\n",
     "\n",
-    "test_pred = test(loader_dict[\"test\"])\n",
-    "test_metrics = task.evaluate(test_pred)\n",
-    "print(f\"Best test metrics: {test_metrics}\")"
+    "# Evaluate on val and test set\n",
+    "eval_model(model, loader_dict, \"val\", task, device, val_table)\n",
+    "eval_model(model, loader_dict, \"test\", task, device, None)"
    ]
   }
  ],
