--- a/draft_tutorial.ipynb
+++ b/draft_tutorial.ipynb
@@ -709,7 +709,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ultimately, we don't see much of a difference from starting from random weights to using a model pre-initialized from another entity classification task."
+    "Ultimately, we don't see much of a difference from starting from random weights to using a model pre-initialized from another entity classification task.\n",
+    "\n",
+    "### Challenge\n",
+    "Does this trend necessarily work on larger and more diverse datasets? Depending on your compute availability, try out using different datasets, like `rel-amazon`, as well as across different types of tasks!"
    ]
   },
   {
