Add some content to the number of layers section

--- a/draft_tutorial.ipynb
+++ b/draft_tutorial.ipynb
@@ -1264,7 +1264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we see, training using $4$ layers actually makes the model perform worse over time. Thus, given the simplicity of the task and the size of dataset, it is likely that we are overfitting."
+    "As we see, training using $4$ layers actually makes the model perform worse over time. Thus, given the simplicity of the task and the size of dataset, it is likely that we are overfitting. In particular, this is because of over-smoothing. Recall that a receptive field is the set of nodes that determine the embedding of a node of interest. However, if we have too many layers, we might have it so that all node embeddings converge to the same value."
    ]
   },
   {
