Add content in the tutorial for Graph Attention Transformers

--- a/draft_tutorial.ipynb
+++ b/draft_tutorial.ipynb
@@ -594,7 +594,30 @@
    "metadata": {},
    "source": [
     "### What about different GNN layers?\n",
-    "We can also just try using different graph layers, featured in PyG. Below is GCN."
+    "Finally, let's explore the use of different GNN layers. In particular, let's explore the use of Graph Attention Networks, also known as GAT.\n",
+    "\n",
+    "In GAT, for a singular node, different importance is assigned to messages coming from different nodes. In particular, the formulation takes inspiration from cognitive attention, focusing only on important parts of the input data.\n",
+    "\n",
+    "To start, we first define our attention mechanism $a$. Then, for given nodes $u$ and $v$, at layer $l$, we we define the attention coefficients using a weight matrix $W^{l}$ and node embeddings $h_u$ and $h_v$ as follows:\n",
+    "\n",
+    "$e_{v_u} := a(W^{l} h_{u}^{(l - 1)}, W^{l} h_{v}^{(l - 1)})$.\n",
+    "\n",
+    "Then, we normalize all of the attention coefficients $e_{v, u}$ using softmax to obtain our attention weights $\\alpha_{v, u}$:\n",
+    "\n",
+    "$\\alpha_{v, u} := \\frac{\\exp e_{v, u}}{\\sum_{k \\in N(v)} \\exp e_{v, k}}$.\n",
+    "\n",
+    "Finally, we use the attention weights in the final update for our embedding:\n",
+    "\n",
+    "$h_{v}^{(l)} := \\sigma( \\sum_{u \\in N(v)} \\alpha_{v, u} W^{l} h_{u}^{(l - 1)})$.\n",
+    "\n",
+    "Overall, the benefits of attention are that we are able to implicitly specify different importance values of neighbors. From a computational standpoint, attention is also storage and computationally efficient.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now use GAT in our RDL pipeline. Note that this comes out of the box already for us with PyG, making our lives a lot easier."
    ]
   },
   {
@@ -632,6 +655,25 @@
     "# Evaluate on val and test set\n",
     "eval_model(gcn_model, loader_dict, \"val\", task, device, val_table)\n",
     "eval_model(gcn_model, loader_dict, \"test\", task, device, None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, the improvements are not that drastic from using GraphSAGE.\n",
+    "\n",
+    "### Challenge\n",
+    "Does this trend necessarily hold on larger and more diverse datasets? Depending on your compute availability, try out using different datasets, like `rel-amazon`, as well as across different types of tasks!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "We hope you enjoyed going through this tutorial! Be sure to try out the challenges!"
    ]
   }
  ],
